nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  labels:
    app: nginx-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-test
